--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "title": "Freelancer",
+    "title": "Tooba Faisal ",
     "name": "startbootstrap-freelancer",
     "version": "7.0.4",
     "scripts": {
